# AneuSI

./: .gitignore  AneuSurfIsolation.kdev4  LICENSE.txt  README.txt
aneurisk_data/automatednecks/: C0001_automatedneck.vtk  C0002_automatedneck.vtk  C0003_automatedneck.vtk  C0004_automatedneck.vtk  C0005_automatedneck.vtk  C0006_automatedneck.vtk  C0007_automatedneck.vtk  C0008_automatedneck.vtk  C0009_automatedneck.vtk  C0010_automatedneck.vtk  C0011_automatedneck.vtk  C0012_automatedneck.vtk  C0013_automatedneck.vtk  C0014_automatedneck.vtk  C0015_automatedneck.vtk  C0016_automatedneck.vtk  C0017_automatedneck.vtk  C0018_automatedneck.vtk  C0019_automatedneck.vtk  C0020_automatedneck.vtk  C0021_automatedneck.vtk  C0022_automatedneck.vtk  C0023_automatedneck.vtk  C0024_automatedneck.vtk  C0025_automatedneck.vtk  C0026_automatedneck.vtk  C0027_automatedneck.vtk  C0028a_automatedneck.vtk  C0028b_automatedneck.vtk  C0029_automatedneck.vtk  C0030_automatedneck.vtk  C0031_automatedneck.vtk  C0032_automatedneck.vtk  C0033_automatedneck.vtk  C0034_automatedneck.vtk  C0035_automatedneck.vtk  C0036_automatedneck.vtk  C0037_automatedneck.vtk  C0038_automatedneck.vtk  C0039_automatedneck.vtk  (+63 more)
aneurisk_data/centerlines/: C0001_centerlines.vtk  C0002_centerlines.vtk  C0003_centerlines.vtk  C0004_centerlines.vtk  C0005_centerlines.vtk  C0006_centerlines.vtk  C0007_centerlines.vtk  C0008_centerlines.vtk  C0009_centerlines.vtk  C0010_centerlines.vtk  C0011_centerlines.vtk  C0012_centerlines.vtk  C0013_centerlines.vtk  C0014_centerlines.vtk  C0015_centerlines.vtk  C0016_centerlines.vtk  C0017_centerlines.vtk  C0018_centerlines.vtk  C0019_centerlines.vtk  C0020_centerlines.vtk  C0021_centerlines.vtk  C0022_centerlines.vtk  C0023_centerlines.vtk  C0024_centerlines.vtk  C0025_centerlines.vtk  C0026_centerlines.vtk  C0027_centerlines.vtk  C0028a_centerlines.vtk  C0029_centerlines.vtk  C0030_centerlines.vtk  C0031_centerlines.vtk  C0032_centerlines.vtk  C0033_centerlines.vtk  C0034_centerlines.vtk  C0035_centerlines.vtk  C0036_centerlines.vtk  C0037_centerlines.vtk  C0038_centerlines.vtk  C0039_centerlines.vtk  C0040_centerlines.vtk  (+59 more)
aneurisk_data/models/: C0001_model.vtk  C0003_model.vtk  C0004_model.vtk  C0005_model.vtk  C0006_model.vtk  C0009_model.vtk  C0010_model.vtk  C0011_model.vtk  C0015_model.vtk  C0016_model.vtk  C0018_model.vtk  C0020_model.vtk  C0022_model.vtk  C0023_model.vtk  C0024_model.vtk  C0025_model.vtk  C0026_model.vtk  C0027_model.vtk  C0029_model.vtk  C0030_model.vtk  C0032_model.vtk  C0037_model.vtk  C0040_model.vtk  C0041_model.vtk  C0043_model.vtk  C0048_model.vtk  C0049_model.vtk  C0050_model.vtk  C0051_model.vtk  C0054_model.vtk  C0056_model.vtk  C0058_model.vtk  C0059_model.vtk  C0060_model.vtk  C0061_model.vtk  C0065_model.vtk  C0067_model.vtk  C0068_model.vtk  C0069_model.vtk  C0070_model.vtk  (+20 more)
examples/: AneuConfigFile.cfg  cases.txt
examples/output/: C0001_output.vtk
src/: AneuSurfIsolation.cpp  CMakeLists.txt
src/.kdev4/: src.kdev4
src/utilities/: aneuConfigFile.cpp  aneuConfigFile.h  aneuFunctions.cpp  aneuFunctions.h  auxAneuSurfIsolation.cpp  auxAneuSurfIsolation.h
